[package]
name = "tamriel-calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rust-i18n = "1"
once_cell = "1.17"


[package.metadata.i18n]
available-locales = ["en", "ru-RU"]
default-locale = "en"
load-path = "locales"
